--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="box">
+	
 		<div class="nav">
 			<ul class="nav_menu">
 				<li class="nav_menu_item"><a href="#"><img src="img/nav_item1.png"></a></li>
@@ -73,7 +73,7 @@
 					<a class="main_header_right_dropdown" href="#"><img src="img/dropdown.png"></a>
 				</div>
 			</header>
-			<main>
+			<main class="submain">
 				<aside class="main_aside">
 					<div class="main_aside_search">
 						<div class="search_box">
@@ -253,6 +253,6 @@
 				
 			</main>
 		</div>
-	</div>
+
 </body>
 </html>
